[gd_scene load_steps=12 format=3 uid="uid://bbrv4g35mhn1c"]

[ext_resource type="Script" path="res://scripts/enemies/witch.gd" id="1_r18j7"]
[ext_resource type="PackedScene" uid="uid://7m34gm3hg474" path="res://components/scenes/movement.tscn" id="2_beml7"]
[ext_resource type="Resource" uid="uid://dbmuec6b1l34j" path="res://resources/enemies/witch.tres" id="2_imn25"]
[ext_resource type="AudioStream" uid="uid://bgfe2oj1ejs6v" path="res://asset/sounds/fx/witch-cackle-250272.mp3" id="3_0kfkt"]
[ext_resource type="Texture2D" uid="uid://bt3myq2lfrfmv" path="res://asset/sprites/witch.png" id="5_b0an1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jy2df"]
radius = 32.0
height = 128.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ns8y3"]
size = Vector2(1295, 320)

[sub_resource type="Animation" id="Animation_38myn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_61mvu"]
resource_name = "atk"
length = 0.5
loop_mode = 1
step = 0.33
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.246083),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"throw_projectile"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.241736, 0.491419),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [11, 12, 13]
}

[sub_resource type="Animation" id="Animation_6xp63"]
resource_name = "idle"
length = 5.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5v5rc"]
_data = {
"RESET": SubResource("Animation_38myn"),
"atk": SubResource("Animation_61mvu"),
"idle": SubResource("Animation_6xp63")
}

[node name="Witch" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 17
script = ExtResource("1_r18j7")
witch = ExtResource("2_imn25")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_jy2df")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-663.5, -96)
shape = SubResource("RectangleShape2D_ns8y3")

[node name="AttackDelayTimer" type="Timer" parent="."]

[node name="ThrowPos" type="Marker2D" parent="."]
position = Vector2(-24, -40)

[node name="Movement" parent="." instance=ExtResource("2_beml7")]

[node name="witch_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_0kfkt")
volume_db = -13.867

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5v5rc")
}
autoplay = "idle"
speed_scale = 0.745

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(11, -27)
scale = Vector2(0.875, 0.875)
texture = ExtResource("5_b0an1")
hframes = 14
